--- a/.github/workflows/sync-codetree.yml
+++ b/.github/workflows/sync-codetree.yml
@@ -2,7 +2,7 @@ name: Sync Codetree Subtree
 
 on:
   schedule:
-    - cron: '0 15 * * *'  # 매일 KST 자정 (UTC 15시)
+    - cron: '0 16 * * *'  # 매일 KST 1시 (UTC 16시)
   workflow_dispatch:      # 수동 실행 버튼도 추가됨
 
 jobs:
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout algorithm repo
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0 # 전체 히스토리를 받아야 subtree pull이 정상 작동함
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set Git config
