--- a/.github/workflows/sync-codetree.yml
+++ b/.github/workflows/sync-codetree.yml
@@ -13,7 +13,6 @@ jobs:
       - name: Checkout algorithm repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # 전체 히스토리를 받아야 subtree pull이 정상 작동함
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set Git config
@@ -28,7 +27,7 @@ jobs:
 
       - name: Pull codetree subtree
         run: |
-          git subtree pull --prefix=codetree codetree main -m "chore(subtree): sync codetree with latest changes"
+          git subtree pull --prefix=codetree codetree main --squash -m "chore(subtree): sync codetree"
 
       - name: Push updated subtree
         run: |
