--- a/.github/workflows/sync-codetree.yml
+++ b/.github/workflows/sync-codetree.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout algorithm repo
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Set Git config
         run: |
@@ -27,7 +27,7 @@ jobs:
 
       - name: Pull codetree subtree
         run: |
-          git subtree pull --prefix=codetree codetree main --squash -m "chore(subtree): sync codetree"
+          git subtree pull --prefix=codetree codetree main -m "chore(subtree): sync codetree"
 
       - name: Push updated subtree
         run: |
