--- a/.github/workflows/sync-codetree.yml
+++ b/.github/workflows/sync-codetree.yml
@@ -2,8 +2,8 @@ name: Sync Codetree Subtree
 
 on:
   schedule:
-    - cron: '0 16 * * *'  # 매일 KST 1시 (UTC 16시)
-  workflow_dispatch:      # 수동 실행 버튼도 추가됨
+    - cron: '0 16 * * *'  # 매일 KST 1시
+  workflow_dispatch:
 
 jobs:
   sync:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout algorithm repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # subtree 병합에 필요한 커밋 이력 확보
 
       - name: Set Git config
         run: |
